README: Fix list item spacing in ToC

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,5 +12,5 @@
 	}
 }
 #toc li > p {
-	margin: 0 !important;
+	margin: 0;
 }
